add admin area and validate login

--- a/Template_MVC/App_GlobalResources/Resource.resx
+++ b/Template_MVC/App_GlobalResources/Resource.resx
@@ -185,4 +185,8 @@
     <value>Reenter Password:</value>
     <comment>Regist</comment>
   </data>
+  <data name="NotAdmin" xml:space="preserve">
+    <value>Non-admin account!</value>
+    <comment>Login</comment>
+  </data>
 </root>
