--- a/Template_MVC/App_GlobalResources/Resource.zh-CN.resx
+++ b/Template_MVC/App_GlobalResources/Resource.zh-CN.resx
@@ -183,4 +183,7 @@
   <data name="PasswordAgain" xml:space="preserve">
     <value>请再输入一次密码!</value>
   </data>
+  <data name="NotAdmin" xml:space="preserve">
+    <value>非管理员帐号!</value>
+  </data>
 </root>
