--- a/Template_MVC/App_GlobalResources/Resource.resx
+++ b/Template_MVC/App_GlobalResources/Resource.resx
@@ -197,4 +197,8 @@
     <value>Registration successful, please login again!</value>
     <comment>Regist</comment>
   </data>
+  <data name="NotGAIA" xml:space="preserve">
+    <value>Gaia does not exist!</value>
+    <comment>Regist</comment>
+  </data>
 </root>
