--- a/Template_MVC/App_GlobalResources/Resource.zh-TW.resx
+++ b/Template_MVC/App_GlobalResources/Resource.zh-TW.resx
@@ -192,4 +192,7 @@
   <data name="RegistDone" xml:space="preserve">
     <value>註冊成功，請重新登入</value>
   </data>
+  <data name="NotGAIA" xml:space="preserve">
+    <value>GAIA不存在的工號</value>
+  </data>
 </root>
