--- a/Template_MVC/App_GlobalResources/Resource.zh-TW.resx
+++ b/Template_MVC/App_GlobalResources/Resource.zh-TW.resx
@@ -195,4 +195,13 @@
   <data name="NotGAIA" xml:space="preserve">
     <value>GAIA不存在的工號</value>
   </data>
+  <data name="Page404" xml:space="preserve">
+    <value>404 - 頁面不存在</value>
+  </data>
+  <data name="Page401" xml:space="preserve">
+    <value>401 - 權限不足</value>
+  </data>
+  <data name="Page500" xml:space="preserve">
+    <value>500 - 伺服器錯誤</value>
+  </data>
 </root>
