--- a/Template_MVC/App_GlobalResources/Resource.vi-VN.resx
+++ b/Template_MVC/App_GlobalResources/Resource.vi-VN.resx
@@ -195,4 +195,13 @@
   <data name="NotGAIA" xml:space="preserve">
     <value>Mã số công việc không tồn tại trong GAIA!</value>
   </data>
+  <data name="Page404" xml:space="preserve">
+    <value>Trang 404 không tồn tại!</value>
+  </data>
+  <data name="Page401" xml:space="preserve">
+    <value>401 - Không đủ quyền!</value>
+  </data>
+  <data name="Page500" xml:space="preserve">
+    <value>500 - Lỗi máy chủ!</value>
+  </data>
 </root>
